--- a/settings.properties
+++ b/settings.properties
@@ -1,4 +1,8 @@
 mongoURI=mongodb://10.141.211.93:27017
-mongoDatabase=chens
-mongoArticleCollection=article_100
-threadNum = 8
+#mongoDatabase=chens
+#mongoArticleCollection=article_100
+mongoDatabase=testSet
+mongoArticleCollection=article_11061629
+mongoDatabase2=testSet
+mongoArticleCollection2=article_1000
+threadNum = 24
