--- a/settings.properties
+++ b/settings.properties
@@ -6,3 +6,4 @@ mongoArticleCollection=article_11061629
 mongoDatabase2=testSet
 mongoArticleCollection2=article_1000
 threadNum = 24
+mongoImageCollection=validImage_20180306
